--- a/docs/notes/37. 使用EnumMap替代序数索引.md
+++ b/docs/notes/37. 使用EnumMap替代序数索引.md
@@ -129,7 +129,7 @@ public enum Phase {
       private static final Map<Phase, Map<Phase, Transition>>
         m = Stream.of(values()).collect(groupingBy(t -> t.from,
          () -> new EnumMap<>(Phase.class),
-         toMap(t -> [t.to](http://t.to), t -> t,
+         toMap(t -> t.to, t -> t,
             (x, y) -> y, () -> new EnumMap<>(Phase.class))));
 
       public static Transition from(Phase from, Phase to) {
